--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -24,7 +24,8 @@
     gap: 20px;
 }
 
-.form input, .form textarea {
+.form input,
+.form textarea {
     padding: 20px;
     border-radius: 5px;
     border: none;
@@ -41,4 +42,10 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
 }
